<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ResultFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/fragment_section_margin_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/materialLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/material"
            android:textColor="@color/black"
            android:textSize="@dimen/label_font_size"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/materialText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/text_margin_horizontal"
            android:textColor="@color/black"
            android:textSize="@dimen/material_font_size"
            android:textStyle="bold"
            tools:text="Plastic"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/fragment_section_margin_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/recyclableLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recyclable"
            android:textColor="@color/black"
            android:textSize="@dimen/label_font_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/recyclableText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/result_font_size"
            android:textStyle="bold"
            tools:text="@string/yes"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/fragment_section_margin_vertical"
        android:layout_marginBottom="@dimen/fragment_section_margin_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/qualityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quality"
            android:textColor="@color/black"
            android:textSize="@dimen/label_font_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/text_margin_horizontal"
            android:text="@string/desc"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/desc_font_size"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>